canada/security-group/smarts-sg.yaml
---
# Brian Gaber
# Security Group Cloudformation Template
# Creates Security Group for SMARTS

Parameters:
  CreationDate:
    Description: Creation Date
    Type: String
    Default: "2023-03-06 10:30:00"
    AllowedPattern: "^\\d{4}(-\\d{2}){2} (\\d{2}:){2}\\d{2}$"
    ConstraintDescription: Date and time of creation
  CreatedBy:
    Description: Who or what created this Cloudformation stack
    Default: Brian Gaber using CloudFormation
    Type: String
  Application:
    Description: Application Name
    Default: SMARTS
    Type: String
  Owner:
    Description: Application Owner
    Default: Kevin Smith
    Type: String
  Incident:
    Description: Service Now Incident
    Default: INC44359425
    Type: String
  Customer:
    Description: Name of Customer
    Default: UHN
    Type: String
  VpcId:
    Description: New VPC Id
    Default: vpc-08fe1dd721e09e558
    Type: AWS::EC2::VPC::Id

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Tags"
        Parameters:
          - CreationDate
          - CreatedBy
          - Application
          - Owner

Resources:
  SmartsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SMARTS
      GroupName: !Join [" ", [!Ref Application, "SG in", !Ref Customer, "VPC"] ]
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 192.94.141.173/32
          Description: SMARTS SNMP Requirement
          IpProtocol: tcp
          FromPort: 161
          ToPort: 162
        - CidrIp: 192.94.141.173/32
          Description: SMARTS SNMP Requirement
          IpProtocol: udp
          FromPort: 161
          ToPort: 162
        - CidrIp: 192.94.141.173/32
          Description: SMARTS Ping Requirement
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
        - CidrIp: 192.94.141.188/32
          Description: SMARTS SNMP Requirement
          IpProtocol: tcp
          FromPort: 161
          ToPort: 162
        - CidrIp: 192.94.141.188/32
          Description: SMARTS SNMP Requirement
          IpProtocol: udp
          FromPort: 161
          ToPort: 162
        - CidrIp: 192.94.141.188/32
          Description: SMARTS Ping Requirement
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
      Tags:
        - Key: Name
          Value: !Join [" ", [!Ref Application, "SG in", !Ref Customer, "VPC"] ]
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref CreatedBy
        - Key: Incident
          Value: !Ref Incident
      VpcId:
        Ref: VpcId

Outputs:
  VPCID:
    Description: VPC Identifier
    Value: !Ref VpcId
  SmartsSecurityGroupId:
    Description: SMARTS Security Group
    Value: !Ref SmartsSecurityGroup
